add chart version to upgrade overview

--- a/assets/index.html
+++ b/assets/index.html
@@ -31,6 +31,9 @@
   <meta name="theme-color" content="#000">
   <link rel="stylesheet" href="/page-load-spinner/page-load-spinner.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap&text=%E2%86%92%E2%86%90%E2%86%91%E2%86%93" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
   <meta name="description" content="Plural Console" />
   <!--
