update theme colors and background styles across components

--- a/assets/index.html
+++ b/assets/index.html
@@ -157,7 +157,7 @@
 
     html[data-theme-mode='light'],
     html[data-theme-mode='light'] body {
-      background-color: #FFFFFF;
+      background-color: #F9FAFA;
     }
   </style>
   <!--
